tests/rosetta/transpiler/C/add-a-variable-to-a-class-instance-at-runtime.error
compile failed: exit status 1: /tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c: In function ‘_mem’:
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:64:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   64 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c: In function ‘user_main’:
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:97:20: error: ‘fields_keys’ undeclared (first use in this function)
   97 |         map_set_ss(fields_keys, fields_vals, &fields_len, name, value);
      |                    ^~~~~~~~~~~
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:97:20: note: each undeclared identifier is reported only once for each function it appears in
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:97:33: error: ‘fields_vals’ undeclared (first use in this function)
   97 |         map_set_ss(fields_keys, fields_vals, &fields_len, name, value);
      |                                 ^~~~~~~~~~~
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:97:47: error: ‘fields_len’ undeclared (first use in this function); did you mean ‘fields’?
   97 |         map_set_ss(fields_keys, fields_vals, &fields_len, name, value);
      |                                               ^~~~~~~~~~
      |                                               fields
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:105:17: error: expected ‘)’ before ‘in’
  105 |         if (name in ss.runtimeFields) {
      |            ~    ^~~
      |                 )
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:106:25: warning: initialization of ‘int’ from ‘const char *’ makes integer from pointer without a cast [-Wint-conversion]
  106 |             int value = map_get_ss(ss.runtimeFields.keys, ss.runtimeFields.vals, ss.runtimeFields.len, name);
      |                         ^~~~~~~~~~
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:107:58: warning: passing argument 2 of ‘str_concat’ makes pointer from integer without a cast [-Wint-conversion]
  107 |             puts(str_concat(str_concat("Its value is '", value), "'"));
      |                                                          ^~~~~
      |                                                          |
      |                                                          int
/tmp/ctranspile2295015855/add-a-variable-to-a-class-instance-at-runtime.mochi.c:8:52: note: expected ‘const char *’ but argument is of type ‘int’
    8 | static char* str_concat(const char *a, const char *b) {
      |                                        ~~~~~~~~~~~~^

