tests/rosetta/transpiler/C/add-a-variable-to-a-class-instance-at-runtime.c
// Generated by Mochi 0.10.32 on 2025-07-25 19:53 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>


static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    if(v==0) return strdup("false");
    if(v==1) return strdup("true");
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

typedef struct { const char **keys; const char **vals; size_t len; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static void map_set_ss(const char *keys[], const char *vals[], size_t *len, const char *key, const char *val) {
    for (size_t i = 0; i < *len; i++) {
        if (strcmp(keys[i], key) == 0) { vals[i] = val; return; }
    }
    keys[*len] = key; vals[*len] = val; (*len)++;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static char* _input(void) {
    char buf[1024];
    if (!fgets(buf, sizeof(buf), stdin)) return strdup("");
    size_t len = strlen(buf);
    if (len > 0 && buf[len-1] == '\n') buf[len-1] = 0;
    return strdup(buf);
}

typedef struct Anon1 Anon1;
typedef struct SomeStruct SomeStruct;

struct Anon1 {
};

struct SomeStruct {
    MapSS runtimeFields;
};

int user_main() {
    SomeStruct ss = (SomeStruct){.runtimeFields = (MapSS){0}};
    puts("Create two fields at runtime: \n");
    int i = 1;
    while (i <= 2) {
        puts(str_concat(str_concat("  Field #", str_int(i)), ":\n"));
        puts("       Enter name  : ");
        const char* name = _input();
        puts("       Enter value : ");
        const char* value = _input();
        MapSS fields = ss.runtimeFields;
        map_set_ss(fields_keys, fields_vals, &fields_len, name, value);
        ss.runtimeFields = fields;
        puts("\n");
        i = i + 1;
    }
    while (1) {
        puts("Which field do you want to inspect ? ");
        const char* name = _input();
        if (name in ss.runtimeFields) {
            int value = map_get_ss(ss.runtimeFields.keys, ss.runtimeFields.vals, ss.runtimeFields.len, name);
            puts(str_concat(str_concat("Its value is '", value), "'"));
            return 0;
        } else {
            puts("There is no field of that name, try again\n");
        }
    }
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        user_main();
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
